# audiencekit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  pyproject.toml
audiencekit/: __init__.py  backends.py  gss.py  personas.py  primitives.py  report.py  survey.py
audiencekit/data/: __init__.py  gss_panel_2022.csv
examples/ferrari_luce/: README.md  ferrari_luce_walkthrough.ipynb  study.json
scripts/: analyze_ferrari.py  extract_panel.py  run_survey.py
skills/persona-browse/: SKILL.md
skills/survey/: SKILL.md
tests/: test_personas.py  test_primitives.py  test_project_hygiene.py  test_report.py  test_survey.py
